# streampoll

./: README.md  test_ws.ps1
src/: index.html  poll.html  settings.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  lib.rs  main.rs  poll.rs  settings.rs  websocket.rs
src/js/: app.js  auth.js  history.js  library.js  poll-overlay.js  poll.js  settings-window.js  settings.js
src/styles/: animations.css  main.css  poll-themes.css  settings.css
